Added parse-torrent-name package as a dependency for parsing movie name from file names

--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/gangadharjannu/movie-file-ratings/issues"
   },
-  "homepage": "https://github.com/gangadharjannu/movie-file-ratings#readme"
+  "homepage": "https://github.com/gangadharjannu/movie-file-ratings#readme",
+  "dependencies": {
+    "parse-torrent-name": "^0.5.4"
+  }
 }
