--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "movie-file-ratings",
   "version": "0.0.1",
   "description": "An application which display IMDB ratings of movie files.",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start":"electron ."
   },
   "repository": {
     "type": "git",
@@ -20,5 +20,8 @@
   "dependencies": {
     "axios": "^0.18.0",
     "parse-torrent-name": "^0.5.4"
+  },
+  "devDependencies": {
+    "electron": "^2.0.5"
   }
 }
